--- a/env.jsonc
+++ b/env.jsonc
@@ -1,80 +1,81 @@
-// A JSONC file is a JSON file with comments.
-// This example configuration file uses comments to tell you information about available settings.
-{
-  /**
-   * Port that Express should listen on.
-   *
-   * Default: 8000
-   */
-  "port": 8000,
-
-  /**
-   * The upload server's base URL. Should include the http(s), and NO trailing slash.
-   *
-   * Default: "http://localhost:8000"
-   */
-  "baseUrl": "http://localhost:8000",
-
-  "auth": {
-    /**
-     * Master password. Needed to create new auth tokens via the web.
-     *
-     * Empty string means password access is disabled.
-     *
-     * Default: ""
-     */
-    "password": ""
-  },
-
-  "uploads": {
-    /**
-     * Path to the folder containing all uploads.
-     * Default: ./uploads
-     */
-    "path": "../uploads",
-
-    /**
-     * Whether the `path` is absolute or relative. If relative, the upload path is relative to the node process' current working directory.
-     *
-     * This should usually be this folder (repository root folder).
-     *
-     * Default: false (relative)
-     */
-    "isPathAbsolute": false,
-
-    /**
-     * Length of randomised file names.
-     *
-     * The number of possible file names can be calculated by raising 52 to the power of this number, e.g. 52^8.
-     *
-     * Default: 8
-     */
-    "fileNameLength": 8
-  },
-
-  /**
-   * Determines what files can be accessed. `true` if they are accessible, and `false` to return a 404.
-   */
-  "fileRetrieval": {
-    /**
-     * Allows access to files starting with a dot (.).
-     *
-     * Default: false (no access)
-     */
-    "dotfiles": false
-  },
-
-  "strings": {
-    /**
-     * Name shown in the copyright footer.
-     */
-    "copyrightName": "Your Name Here"
-  },
-
-  "attribution": {
-    /**
-     * Shows a link to the GitHub project on the server home page.
-     */
-    "homePageGitHubLink": true
-  }
+// A JSONC file is a JSON file with comments. 
+// This example configuration file uses comments to tell you information about available settings. 
+{ 
+  /** 
+   * Port that Express should listen on. 
+   * 
+   * Default: 8000 
+   */ 
+  "port": 8000, 
+ 
+  /** 
+   * The upload server's base URL. Should include the http(s), and NO trailing slash. 
+   * 
+   * Default: "http://localhost:8000" 
+   */ 
+  "baseUrl": "https://u.davwheat.dev", 
+ 
+  "auth": { 
+    /** 
+     * Master password. Needed to create new auth tokens via the web. 
+     * 
+     * Empty string means password access is disabled. 
+     * 
+     * Default: "" 
+     */ 
+    "password": "" 
+    // "password": "!JRF_3)H$-d)EXm'~jXT/Yn?Fp_U!m=aGb<9]`!jqwCQ+;-Q:Reb,AF[p!B=zJq_WU.~aW+`9gg{g>4a)5$R&nM:vF!^'>zdrqA[NCuQ4zLm`wQxyZ??JxFS]!-Lp$Mr" 
+  }, 
+ 
+  "uploads": { 
+    /** 
+     * Path to the folder containing all uploads. 
+     * Default: ./uploads 
+     */ 
+    "path": "../uploads", 
+ 
+    /** 
+     * Whether the `path` is absolute or relative. If relative, the upload path is relative to the node process' current working directory. 
+     * 
+     * This should usually be this folder (repository root folder). 
+     * 
+     * Default: false (relative) 
+     */ 
+    "isPathAbsolute": false, 
+ 
+    /** 
+     * Length of randomised file names. 
+     * 
+     * The number of possible file names can be calculated by raising 52 to the power of this number, e.g. 52^8. 
+     * 
+     * Default: 8 
+     */ 
+    "fileNameLength": 8 
+  }, 
+ 
+  /** 
+   * Determines what files can be accessed. `true` if they are accessible, and `false` to return a 404. 
+   */ 
+  "fileRetrieval": { 
+    /** 
+     * Allows access to files starting with a dot (.). 
+     * 
+     * Default: false (no access) 
+     */ 
+    "dotfiles": false 
+  }, 
+ 
+  "strings": { 
+    /** 
+     * Name shown in the copyright footer. 
+     */ 
+    "copyrightName": "David Wheatley" 
+  }, 
+ 
+  "attribution": { 
+    /** 
+     * Shows a link to the GitHub project on the server home page. 
+     */ 
+    "homePageGitHubLink": true 
+  } 
 }
